# bcurve

./: .gitignore  Cargo.toml  LICENSE  README.md  examples.sh  install_and_build.sh  test_fixes.sh  test_principled.sh  whitelist_example.txt
.github/workflows/: ci.yml  release.yml
src/: curves.rs  dlmm.rs  lib.rs  main.rs  plot.rs  verifier.rs
tests/: csv_shape.rs  properties.proptest-regressions  properties.rs
