[package]
name = "bcurve"
version = "0.1.0"
edition = "2021"
description = "DLMM bonding curve"
license = "MIT"
repository = "https://github.com/jitendra2603/bcurve"
keywords = ["AMM", "DLMM", "bonding-curve", "market-microstructure", "quant"]
categories = ["science", "mathematics", "finance"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
csv = "1"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1"
approx = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
